# zendesk_clone

./: .gitignore  README.md  amplify.yml  cypress.config.js  drizzle.config.ts  index.html  package-lock.json  package.json  schema.sql  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
cypress/e2e/: auth.cy.ts  login.cy.ts  signup.cy.ts
cypress/support/: commands.ts  e2e.ts
langserve/: Dockerfile  README.md  pyproject.toml
langserve/app/: server.py
src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AuthCallback.test.tsx  AuthCallback.tsx  CountriesList.tsx  CreateUser.tsx  CustomerList.tsx  Header.tsx  LoadingSpinner.tsx  LoginPage.test.tsx  LoginPage.tsx  OnboardingWalkthrough.tsx  ProtectedRoute.tsx  Sidebar.tsx  TicketList.tsx  UserSearch.tsx
src/components/agents/: AgentDetailPanel.tsx  AgentsPage.tsx  NewAgentModal.tsx
src/components/analytics/: AnalyticsDashboard.tsx  StatsCard.tsx
src/components/help/: HelpCenter.tsx
src/config/: env.ts  sentry.ts
src/context/: AuthContext.tsx  DarkModeContext.tsx
src/db/: index.ts  migrate.ts  roles.ts  schema.ts
src/lib/: polyfill.ts  supabaseClient.ts
src/routes/: ProtectedRoute.tsx  index.tsx
src/services/: teamService.ts  ticketService.ts  userService.ts
src/styles/: globals.css
src/test/: utils.tsx
src/types/: faq.ts  team.ts  ticket.ts  user.ts
src/utils/: emailValidation.ts
supabase/: config.toml
supabase/migrations/: 20250122123308_remote_schema.sql  20250122124323_remote_schema.sql
(+136 files in other folders)
