[tool.poetry]
packages = [
    { include = "app" }
]
name = "langchain-server"
version = "0.1.0"
description = "A simple API server using LangChain's Runnable interfaces"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
langchain = "0.3.17"
langchain-openai = "^0.3.3"
langgraph = "^0.2.68"
uvicorn = "^0.34.0"
langserve = {extras = ["server"], version = "^0.3.1"}
httpx = "^0.28.0"
supabase = "^2.7.1"
pinecone-client = "^5.0.1"
langchain_community = "^0.3.16"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"